feat: add database reset on Railway startup

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "server:direct": "node server/server.cjs",
     "proxy": "node server/proxy-server.js",
     "dev:all": "concurrently \"npm run dev\" \"node server/server.cjs\"",
-    "start": "node server/server.cjs",
+    "start": "node reset-db.js && node server/server.cjs",
     "railway:build": "npm install && npm run build",
+    "reset-db": "node reset-db.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "lint": "eslint src/",
