--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "server:direct": "node server/server.cjs",
     "proxy": "node server/proxy-server.js",
     "dev:all": "concurrently \"npm run dev\" \"node server/server.cjs\"",
-    "start": "node reset-db.js && node server/server.cjs",
+    "start": "node server/server.cjs",
     "railway:build": "npm install && npm run build",
     "reset-db": "node reset-db.js",
     "test": "vitest",
