--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev:all": "concurrently \"npm run dev\" \"node server/server.cjs\"",
     "start": "node server/server.cjs",
     "railway:build": "npm install && npm run build",
-    "reset-db": "node reset-db.js",
+    "reset-db": "node reset-db.cjs",
+    "update-password": "node update-password.cjs",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "lint": "eslint src/",
